# LFU

./: .gitignore  CMakeLists.txt  driver.cpp  makefile  readme.md
caches/: ideal.hpp
include/: ideal.hpp  lfu.hpp
src/: driver.cpp
tests/: tester.sh
